objects/CareProgramEnrollee/fields/ConsentStatus__c.field-meta.xml
<CustomField>
    <fullName>ConsentStatus__c</fullName>
    <description>Capture the treatment consent status.</description>
    <label>Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Treatment Consent Unverified</fullName>
                <default>true</default>
                <label>Treatment Consent Unverified</label>
            </value>
            <value>
                <fullName>Treatment Consent Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>