objects/CareProgramEnrollee/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Capture the consent related comments here if any.</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>