objects/CareProgramEnrollee/fields/IsVisibleOnPatientCard__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleOnPatientCard__c</fullName>
    <description>The field is being referenced in Patient Cared configuration record named Treatment Consent Status.</description>
    <formula>NOT(ISBLANK(Name))</formula>
    <label>IsVisibleOnPatientCard</label>
    <type>Checkbox</type>
</CustomField>